--- a/app/src/main/assets/my_earnings_chart.html
+++ b/app/src/main/assets/my_earnings_chart.html
@@ -65,7 +65,7 @@
             enabled: false 
         },
         chart: {
-            backgroundColor: '#F5F5F5',
+            backgroundColor: '#FFFFFF',
             marginLeft: 70,
             marginRight: 70,
             
