--- a/app/src/main/assets/my_recom_chart.html
+++ b/app/src/main/assets/my_recom_chart.html
@@ -56,7 +56,7 @@
     Highcharts.stockChart('chartContainer',{
       chart: {
         type: 'column',
-        backgroundColor: '#F5F5F5'
+        backgroundColor: '#FFFFFF'
       },
       title: {
         text: 'Recommendation Trends'
